CSC-466 Language Processing/A6/w.output
Terminals unused in grammar

   TBegin
   TEnd
   TIf
   TWhile
   TLessThan
   TGreaterThan
   TEqual


Grammar

    0 $accept: Program $end

    1 Program: TStart TFinish
    2        | TStart DeclarationList StatementList TFinish

    3 DeclarationList: DeclarationList Declaration
    4                | Declaration

    5 Declaration: TIdentifier DeclarationTail

    6 DeclarationTail: ',' TIdentifier DeclarationTail
    7                | ':' Type ';'

    8 Type: TIntLiteral
    9     | TFloatLiteral
   10     | TBoolLiteral

   11 StatementList: StatementList Statement
   12              | Statement

   13 Statement: TPrint TStringLiteral ';'
   14          | TPrintLn TIdentifier ';'
   15          | TPrintLn ';'
   16          | TIdentifier TAssign Expression ';'
   17          | error ';'

   18 Expression: Expression '+' Term
   19           | Expression '-' Term
   20           | Term

   21 Term: Term '*' Factor
   22     | Term '/' Factor
   23     | Factor
   24     | error ';'

   25 Factor: TIdentifier
   26       | TFloatLiteral
   27       | TIntLiteral
   28       | TTrue
   29       | TFalse
   30       | '(' Expression ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 30
')' (41) 30
'*' (42) 21
'+' (43) 18
',' (44) 6
'-' (45) 19
'/' (47) 22
':' (58) 7
';' (59) 7 13 14 15 16 17 24
error (256) 17 24
TStart (258) 1 2
TFinish (259) 1 2
TBegin (260)
TEnd (261)
TIntLiteral (262) 8 27
TFloatLiteral (263) 9 26
TBoolLiteral (264) 10
TPrint (265) 13
TPrintLn (266) 14 15
TIf (267)
TWhile (268)
TLessThan (269)
TGreaterThan (270)
TEqual (271)
TFalse (272) 29
TTrue (273) 28
TAssign (274) 16
TStringLiteral (275) 13
TIdentifier (276) 5 6 14 16 25


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1 2, on right: 0
DeclarationList (33)
    on left: 3 4, on right: 2 3
Declaration (34)
    on left: 5, on right: 3 4
DeclarationTail (35)
    on left: 6 7, on right: 5 6
Type (36)
    on left: 8 9 10, on right: 7
StatementList (37)
    on left: 11 12, on right: 2 11
Statement (38)
    on left: 13 14 15 16 17, on right: 11 12
Expression (39)
    on left: 18 19 20, on right: 16 18 19 30
Term (40)
    on left: 21 22 23 24, on right: 18 19 20 21 22
Factor (41)
    on left: 25 26 27 28 29 30, on right: 21 22 23


State 0

    0 $accept: . Program $end

    TStart  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: TStart . TFinish
    2        | TStart . DeclarationList StatementList TFinish

    TFinish      shift, and go to state 3
    TIdentifier  shift, and go to state 4

    DeclarationList  go to state 5
    Declaration      go to state 6


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 7


State 3

    1 Program: TStart TFinish .

    $default  reduce using rule 1 (Program)


State 4

    5 Declaration: TIdentifier . DeclarationTail

    ','  shift, and go to state 8
    ':'  shift, and go to state 9

    DeclarationTail  go to state 10


State 5

    2 Program: TStart DeclarationList . StatementList TFinish
    3 DeclarationList: DeclarationList . Declaration

    error        shift, and go to state 11
    TPrint       shift, and go to state 12
    TPrintLn     shift, and go to state 13
    TIdentifier  shift, and go to state 14

    Declaration    go to state 15
    StatementList  go to state 16
    Statement      go to state 17


State 6

    4 DeclarationList: Declaration .

    $default  reduce using rule 4 (DeclarationList)


State 7

    0 $accept: Program $end .

    $default  accept


State 8

    6 DeclarationTail: ',' . TIdentifier DeclarationTail

    TIdentifier  shift, and go to state 18


State 9

    7 DeclarationTail: ':' . Type ';'

    TIntLiteral    shift, and go to state 19
    TFloatLiteral  shift, and go to state 20
    TBoolLiteral   shift, and go to state 21

    Type  go to state 22


State 10

    5 Declaration: TIdentifier DeclarationTail .

    $default  reduce using rule 5 (Declaration)


State 11

   17 Statement: error . ';'

    ';'  shift, and go to state 23


State 12

   13 Statement: TPrint . TStringLiteral ';'

    TStringLiteral  shift, and go to state 24


State 13

   14 Statement: TPrintLn . TIdentifier ';'
   15          | TPrintLn . ';'

    TIdentifier  shift, and go to state 25
    ';'          shift, and go to state 26


State 14

    5 Declaration: TIdentifier . DeclarationTail
   16 Statement: TIdentifier . TAssign Expression ';'

    TAssign  shift, and go to state 27
    ','      shift, and go to state 8
    ':'      shift, and go to state 9

    DeclarationTail  go to state 10


State 15

    3 DeclarationList: DeclarationList Declaration .

    $default  reduce using rule 3 (DeclarationList)


State 16

    2 Program: TStart DeclarationList StatementList . TFinish
   11 StatementList: StatementList . Statement

    error        shift, and go to state 11
    TFinish      shift, and go to state 28
    TPrint       shift, and go to state 12
    TPrintLn     shift, and go to state 13
    TIdentifier  shift, and go to state 29

    Statement  go to state 30


State 17

   12 StatementList: Statement .

    $default  reduce using rule 12 (StatementList)


State 18

    6 DeclarationTail: ',' TIdentifier . DeclarationTail

    ','  shift, and go to state 8
    ':'  shift, and go to state 9

    DeclarationTail  go to state 31


State 19

    8 Type: TIntLiteral .

    $default  reduce using rule 8 (Type)


State 20

    9 Type: TFloatLiteral .

    $default  reduce using rule 9 (Type)


State 21

   10 Type: TBoolLiteral .

    $default  reduce using rule 10 (Type)


State 22

    7 DeclarationTail: ':' Type . ';'

    ';'  shift, and go to state 32


State 23

   17 Statement: error ';' .

    $default  reduce using rule 17 (Statement)


State 24

   13 Statement: TPrint TStringLiteral . ';'

    ';'  shift, and go to state 33


State 25

   14 Statement: TPrintLn TIdentifier . ';'

    ';'  shift, and go to state 34


State 26

   15 Statement: TPrintLn ';' .

    $default  reduce using rule 15 (Statement)


State 27

   16 Statement: TIdentifier TAssign . Expression ';'

    error          shift, and go to state 35
    TIntLiteral    shift, and go to state 36
    TFloatLiteral  shift, and go to state 37
    TFalse         shift, and go to state 38
    TTrue          shift, and go to state 39
    TIdentifier    shift, and go to state 40
    '('            shift, and go to state 41

    Expression  go to state 42
    Term        go to state 43
    Factor      go to state 44


State 28

    2 Program: TStart DeclarationList StatementList TFinish .

    $default  reduce using rule 2 (Program)


State 29

   16 Statement: TIdentifier . TAssign Expression ';'

    TAssign  shift, and go to state 27


State 30

   11 StatementList: StatementList Statement .

    $default  reduce using rule 11 (StatementList)


State 31

    6 DeclarationTail: ',' TIdentifier DeclarationTail .

    $default  reduce using rule 6 (DeclarationTail)


State 32

    7 DeclarationTail: ':' Type ';' .

    $default  reduce using rule 7 (DeclarationTail)


State 33

   13 Statement: TPrint TStringLiteral ';' .

    $default  reduce using rule 13 (Statement)


State 34

   14 Statement: TPrintLn TIdentifier ';' .

    $default  reduce using rule 14 (Statement)


State 35

   24 Term: error . ';'

    ';'  shift, and go to state 45


State 36

   27 Factor: TIntLiteral .

    $default  reduce using rule 27 (Factor)


State 37

   26 Factor: TFloatLiteral .

    $default  reduce using rule 26 (Factor)


State 38

   29 Factor: TFalse .

    $default  reduce using rule 29 (Factor)


State 39

   28 Factor: TTrue .

    $default  reduce using rule 28 (Factor)


State 40

   25 Factor: TIdentifier .

    $default  reduce using rule 25 (Factor)


State 41

   30 Factor: '(' . Expression ')'

    error          shift, and go to state 35
    TIntLiteral    shift, and go to state 36
    TFloatLiteral  shift, and go to state 37
    TFalse         shift, and go to state 38
    TTrue          shift, and go to state 39
    TIdentifier    shift, and go to state 40
    '('            shift, and go to state 41

    Expression  go to state 46
    Term        go to state 43
    Factor      go to state 44


State 42

   16 Statement: TIdentifier TAssign Expression . ';'
   18 Expression: Expression . '+' Term
   19           | Expression . '-' Term

    ';'  shift, and go to state 47
    '+'  shift, and go to state 48
    '-'  shift, and go to state 49


State 43

   20 Expression: Term .
   21 Term: Term . '*' Factor
   22     | Term . '/' Factor

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 20 (Expression)


State 44

   23 Term: Factor .

    $default  reduce using rule 23 (Term)


State 45

   24 Term: error ';' .

    $default  reduce using rule 24 (Term)


State 46

   18 Expression: Expression . '+' Term
   19           | Expression . '-' Term
   30 Factor: '(' Expression . ')'

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49
    ')'  shift, and go to state 52


State 47

   16 Statement: TIdentifier TAssign Expression ';' .

    $default  reduce using rule 16 (Statement)


State 48

   18 Expression: Expression '+' . Term

    error          shift, and go to state 35
    TIntLiteral    shift, and go to state 36
    TFloatLiteral  shift, and go to state 37
    TFalse         shift, and go to state 38
    TTrue          shift, and go to state 39
    TIdentifier    shift, and go to state 40
    '('            shift, and go to state 41

    Term    go to state 53
    Factor  go to state 44


State 49

   19 Expression: Expression '-' . Term

    error          shift, and go to state 35
    TIntLiteral    shift, and go to state 36
    TFloatLiteral  shift, and go to state 37
    TFalse         shift, and go to state 38
    TTrue          shift, and go to state 39
    TIdentifier    shift, and go to state 40
    '('            shift, and go to state 41

    Term    go to state 54
    Factor  go to state 44


State 50

   21 Term: Term '*' . Factor

    TIntLiteral    shift, and go to state 36
    TFloatLiteral  shift, and go to state 37
    TFalse         shift, and go to state 38
    TTrue          shift, and go to state 39
    TIdentifier    shift, and go to state 40
    '('            shift, and go to state 41

    Factor  go to state 55


State 51

   22 Term: Term '/' . Factor

    TIntLiteral    shift, and go to state 36
    TFloatLiteral  shift, and go to state 37
    TFalse         shift, and go to state 38
    TTrue          shift, and go to state 39
    TIdentifier    shift, and go to state 40
    '('            shift, and go to state 41

    Factor  go to state 56


State 52

   30 Factor: '(' Expression ')' .

    $default  reduce using rule 30 (Factor)


State 53

   18 Expression: Expression '+' Term .
   21 Term: Term . '*' Factor
   22     | Term . '/' Factor

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 18 (Expression)


State 54

   19 Expression: Expression '-' Term .
   21 Term: Term . '*' Factor
   22     | Term . '/' Factor

    '*'  shift, and go to state 50
    '/'  shift, and go to state 51

    $default  reduce using rule 19 (Expression)


State 55

   21 Term: Term '*' Factor .

    $default  reduce using rule 21 (Term)


State 56

   22 Term: Term '/' Factor .

    $default  reduce using rule 22 (Term)
